fixed text-shadow on about section for mobile (overlap issue)

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -1110,6 +1110,8 @@ body {
           p {
             font-size: 1rem !important;
             letter-spacing: 1.3px !important;
+            text-shadow: 0px 0.5px 0px hsl(28, 32%, 16%),
+              0px -0.5px 0px rgba(0, 0, 0, 1);
           }
         }
       }
